<resources>
    <string name="app_name">ActiveStudy</string>

    <!--Name of activity-->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_detail_class">Chi tiết lớp học</string>
    <string name="title_activity_list_studen_of_class">Danh sách học viên của lớp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_input_code">InputCodeActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--text hint-->
    <string name="text_hint_email">Email</string>
    <string name="text_hint_otp">Mã OTP</string>

    <!--text button-->
    <string name="text_button_continue">Continue</string>
    <string name="text_button_logout">Log out</string>
    <string name="text_button_resend">Gửi lại mã</string>
    <string name="register">Đăng Ký Khóa Học</string>
    <string name="edit_course">Chỉnh Sửa Khóa Học</string>

    <!--toast alert-->
    <string name="toast_input_email">Yêu cầu nhập Email</string>
    <string name="toast_input_otp">Yêu cầu nhập OTP</string>
    <string name="toast_wrong_email">Email không đúng</string>

    <!--toast alert-->
    <string name="toast_error">Có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="toast_system_error">Có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="toast_success">Thành công!</string>
    <string name="toast_mauthen_accountid_invalidformat">Định dạng AccountId không đúng.</string>
    <string name="toast_mauthen_accountid_unexist">AccountId không tồn tại!</string>
    <string name="toast_mauthen_deviceid_empty">DeviceId không có.</string>
    <string name="toast_mauthen_otpcode_invalidformat">Sai OTP. Vui lòng thử lại!</string>
    <string name="toast_mauthen_authenid_invalidformat">Sai AuthenId. Vui lòng thử lại!</string>
    <string name="toast_over_numberretry_otpcode">over_numberretry_otpcode</string>
    <string name="toast_mauthen_sessionid_invalidformat">Sai định dạng sessitonID.</string>

    <string name="toast_network_not_available">Cài đặt kết nối mạng và thử lại</string>
    <string name="toast_resend_otp">Đã gửi lại OTP code!</string>

    <string name="title_activity_edit_course">EditCourseActivity</string>

    <!-- Detail class -->
    <string name="label_class_name">Tên lớp:</string>
    <string name="label_course_name">Khóa học</string>
    <string name="label_start_date">Ngày khai giảng</string>
    <string name="title_activity_chat_group">ChatGroupActivity</string>
    <string name="title_activity_test_chat">TestChatActivity</string>

</resources>
